find the closet driver and send to client
