# final-project/src/main/resources/swagger/api.yaml
@@ -54,7 +54,7 @@ paths:
       parameters:
         - name: phone
           in: query
-          description: phone of customer need to update
+          description: phone of customer need to query
           required: true
           type: string
       responses:
@@ -173,28 +173,7 @@ paths:
         '404':
           description: Customer not found
 
-  /driver/{username}:
-    get:
-      tags:
-        - driver
-      summary: Get driver by user name
-      description: ''
-      operationId: getDriverByUsername
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be fetched
-          required: true
-          type: string
-      responses:
-        '200':
-          description: successful operation
-          schema:
-            $ref: '#/definitions/Driver'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: Driver not found
+  /driver/{id}:
     put:
       tags:
         - driver
@@ -202,9 +181,9 @@ paths:
       description: This can only be done by the logged in user.
       operationId: updateDriver
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: name that need to be deleted
+          description: id of driver need to update
           required: true
           type: string
         - name: body
@@ -222,25 +201,6 @@ paths:
           description: Invalid username supplied
         '404':
           description: Driver not found
-    post:
-      tags:
-        - driver
-      summary: Toggle online status
-      description: This can only be done by the logged in user.
-      operationId: switchToOnlineDriver
-      parameters:
-        - name: username
-          in: path
-          description: The username of user that needs to be turn on
-          required: true
-          type: string
-      responses:
-        '200':
-          description: Update successfully
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: Driver not found
     delete:
       tags:
         - driver
@@ -248,9 +208,9 @@ paths:
       description: This can only be done by the logged in user.
       operationId: deleteDriver
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: The username of user that needs to be deleted
+          description: The id of driver that needs to be deleted
           required: true
           type: string
       responses:
@@ -280,6 +240,66 @@ paths:
             $ref: '#/definitions/Driver'
         '400':
           description: Invalid request
+    get:
+      tags:
+        - driver
+      summary: Get driver by phone
+      operationId: getDriverInfoByPhone
+      parameters:
+        - name: phone
+          in: query
+          description: phone of driver need to query
+          required: true
+          type: string
+      responses:
+        default:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Driver'
+        '400':
+          description: Invalid request
+        '404':
+          description: Driver not found
+  /driver/online/{id}:
+    post:
+      tags:
+        - driver
+      summary: Toggle online status
+      description: This can only be done by the logged in user.
+      operationId: switchToOnlineDriver
+      parameters:
+        - name: id
+          in: path
+          description: The id of driver that needs to be turn on
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Update successfully
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: Driver not found
+  /driver/offline/{id}:
+    post:
+      tags:
+        - driver
+      summary: Toggle offline status
+      description: This can only be done by the logged in user.
+      operationId: switchToOfflineDriver
+      parameters:
+        - name: id
+          in: path
+          description: The id of driver that needs to be turn off
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Update successfully
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: Driver not found
   /driver/register:
     post:
       tags:
@@ -300,16 +320,16 @@ paths:
             $ref: '#/definitions/Driver'
         '400':
           description: Invalid request
-  /driver/sync-location/{username}:
+  /driver/sync-location/{id}:
     post:
       tags:
         - driver
       summary: Update current location
       operationId: syncLocation
       parameters:
-        - name: username
+        - name: id
           in: path
-          description: The driver's username that needs to be sync
+          description: The driver's id that needs to be sync
           required: true
           type: string
         - name: body
@@ -427,6 +447,25 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/Journey'
+        '400':
+          description: Invalid request
+        '404':
+          description: Journey not found
+    post:
+      tags:
+        - journey
+      summary: Find driver for journey
+      description: This can only be done by the logged in user.
+      operationId: findDriver
+      parameters:
+        - name: id
+          in: path
+          description: id of journey
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Found driver successfully
         '400':
           description: Invalid request
         '404':
